fix word-wrap styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ p {
   margin-bottom: 16px;
   margin-left: 40px;
   transition: 0.3s;
+  word-wrap: break-word;
 }
 
 .message:hover {
